// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewHeader /> should render renders children 1`] = `
<h3
  className="view-header"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="test-child"
  />
  <div>
    Hello world
  </div>
</h3>
`;

exports[`<ViewHeader /> should render with count 1`] = `
<h3
  className="view-header"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Foo"
  />
</h3>
`;

exports[`<ViewHeader /> should render with title 1`] = `
<h3
  className="view-header"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Foo"
  />
</h3>
`;
